# just-test

./: .gitignore  CMakeLists.txt  README.md  main.cpp
my_tasks/: competed_tasks  many_tasks.txt  task_list.txt  tasks_numbers
src/: Cmakelists.txt
src/files/: CMakeLists.txt  data.cpp  data.h  includes.h  jsones.cpp  jsones.h
src/files/source_cmds/: CMakeLists.txt  myiterator.cpp  myiterator.h
src/libs/: CmakeLists.txt
src/modules/: cmakelists.txt  kt_math.cpp  kt_math.h
src/modules/kt_neyrons/: neyrons.cpp  neyrons.h
src/nn/: activate.h  cmakelists.txt  inc.h  layer.h  matrix.h  network.h  vector.h
